Update 3: Style Update, Word List Feature, and Exit Button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="actionRow">
         <button id="createRoom">Create Room</button>
         <button id="joinRoom">Join Room</button>
-        <button id="wordListBtn" class="secondary">Word List</button>
+        <button id="wordListBtn">Word List</button>
       </div>
     </div>
 
