Update 4: Bug Fixes.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="wordScreen" class="hidden card-panel">
       <h2>Word List</h2>
-      <p class="muted">Base words cannot be removed. Added words are saved on this device.</p>
+      <p class="muted">Base words cannot be removed. Added words are shared with everyone in this room.</p>
       <div id="wordList"></div>
       <div id="addWordRow">
         <input id="newWordInput" placeholder="Add a word" maxlength="30" />
