Update 6: Universal Word List

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="wordScreen" class="hidden card-panel">
       <h2>Word List</h2>
-      <p class="muted">Words are saved on this device and shared with your room. You can remove base words, but keep at least 25 words total.</p>
+      <p class="muted">Everyone shares the same word list. You can remove base words, but keep at least 25 words total.</p>
       <div id="wordList"></div>
       <div id="addWordRow">
         <input id="newWordInput" placeholder="Add a word" maxlength="30" />
